--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
     ========================================================= -->
     <link rel="stylesheet" href="css/awesome-bootstrap-checkbox.css" type="text/css"/>
     <link rel="stylesheet" href="css/butter.css" type="text/css"/>
+    <link rel="stylesheet" href="css/style.css">
 
     <script src="js/modernizr.custom.js"></script>
 
